<resources>
    <string name="app_name">AppFavas</string>
    <string name="title_activity_layout_drawable">LayoutDrawableActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="login">Login</string>
    <string name="propietario">Propietario</string>
    <string name="recibos">Recibos</string>
    <string name="ventas">Ventas</string>
    <string name="articulos">Artículos</string>
    <string name="cocina">Cocina</string>
    <string name="configuraciones">Configuraciones</string>
    <string name="cierre">Cierre</string>
    <string name="pagos">Pagos</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="buscar">Buscar</string>
    <string name="fecha">Fecha</string>
    <string name="img_billete">img_billete</string>
    <string name="importe_monto">Importe/Monto</string>
    <string name="hora">Hora</string>
    <string name="id">ID</string>
    <string name="img_tarjeta">img_tarjeta</string>
    <string name="agregar_fruta">Agregar Fruta</string>
    <string name="nombre">Nombre</string>
    <string name="precio">Precio</string>
    <string name="_0_00">0.00</string>
    <string name="inventario">Inventario</string>
    <string name="stock">Stock</string>
    <string name="_0">0</string>
    <string name="guardar">Guardar</string>
    <string name="editar_frutas">Editar Frutas</string>
    <string name="descripcion_egresos">Descripción</string>
    <string name="cantidad">Cantidad</string>
    <string name="realizar_pago">Realizar Pago</string>
    <string name="editar_pago">Editar Pago</string>
    <string name="eliminar_pago">Eliminar Pago</string>
    <string name="agregar_inventario">Agregar Inventario</string>

    <string name="reembolsar">Reembolsar</string>
    <string name="totaln">Total</string>
    <string name="total">0.00</string>

    <!--Spinner Roles-->
    <string-array name="roles">
        <item>Administrador</item>
        <item>Cocina</item>
    </string-array>
    <string name="prompt">Roles</string>
    <string name="nueva_venta">Nueva Venta</string>
    <string name="cambio">CAMBIO</string>
    <string name="total_pagado">TOTAL PAGADO</string>
    <string name="total_tarjeta">TOTAL TARJETA</string>
    <string name="pagosMays">PAGOS</string>
    <string name="monto">Monto</string>
    <string name="referencia">Referencia</string>
    <string name="menu_desplegable">Menu Desplegable</string>
    <string name="registrarse">¿No tienes cuenta? Registrate aquí!</string>
    <string name="olvidaste_contraseña">¿Has olvidado tu contraseña?</string>
    <string name="Login">login</string>
    <string name="contraseña">Contraseña</string>
    <string name="usuario">Usuario</string>
    <string name="Iniciar_sesion">Iniciar Sesión</string>
    <string name="comprar">Comprar</string>
    <string name="categoria">Categoría</string>
    <string name="productos">Productos</string>
    <string name="ordenar">Ordenar</string>
    <string name="en_stock">En stock</string>
    <string name="productimg">ProductIMG</string>
    <string name="elija_una_foto">ELIJA UNA FOTO</string>
    <string name="crear">Crear</string>
    <string name="limpiar">Limpiar</string>
    <string name="editar_categoria">Editar Categoría</string>
    <string name="editar">Editar</string>
    <string name="eliminar">Eliminar</string>
    <string name="editar_articulo">Editar Artículo</string>
    <string name="nombre_de_la_categoria">Nombre de la Categoría</string>
    <string name="imagen_de_la_categoria">Imagen de la categoría</string>
    <string name="limpiar_campos">Limpiar Campos</string>
    <string name="eliminar_categoria">Eliminar Categoria</string>
    <string name="nuevo_articulo">Nuevo Artículo</string>
    <string name="recuperar_constraseña">Recuperar Constraseña</string>
    <string name="nombres">Nombres</string>
    <string name="apellidos">Apellidos</string>
    <string name="correo">Correo</string>
    <string name="nueva_contraseña">Nueva Contraseña</string>
    <string name="cambiar_contraseña">Cambiar Contraseña</string>
    <string name="registro_de_usuarios">Registro de usuarios</string>
    <string name="registro">Registrarse</string>
    <string name="nombre_del_producto">Nombre del Producto</string>
    <string name="cs_0_00">C$ 0.00</string>
    <string name="montoitem">Monto:</string>
    <string name="email">Email</string>
    <string name="rol">Rol</string>
    <string name="iniciar_sesion">Iniciar Sesión</string>
    <string name="has_olvidado_tu_contraseña">¿Has olvidado tu contraseña?</string>
    <string name="historial_ventas">Historial Ventas</string>
    <string name="historial_pagos">Historial Pagos</string>
    <string name="historial_inventario">Historial Inventario</string>
    <string name="historiales">Historiales</string>
    <string name="informes">Informes</string>
    <string name="informe_inventario">Informe Inventario</string>
    <string name="informe_pagos">Informe Pagos</string>
    <string name="informe_ventas">Informe Ventas</string>
    <string name="usuarios">Usuarios</string>
    <string name="categor_as">Categorías</string>
    <string name="historial_de_ventas">Historial Ventas</string>
    <string name="totala">Total:</string>
    <string name="informe_articulos">Informe Articulos</string>
    <string name="nombre_producto">Nombre Producto</string>
    <string name="crear_categoria">Crear Categoría</string>
    <string name="guardar_categoria">Guardar Categoría</string>
    <string name="total_pago">TOTAL PAGO</string>
    <string name="efectivo_recibido">Efectivo recibido</string>
    <string name="por_tarjeta">Por tarjeta</string>
    <string name="cobrar">Cobrar</string>
    <string name="articulos_creados">Artículos Creados</string>
    <string name="categorias_existentes">Categorías existentes</string>
    <string name="cantidad_total_a_pagar">Cantidad Total A Pagar</string>
    <string name="efectivo">Efectivo</string>
    <string name="tarjeta">Tarjeta</string>
    <string name="dolares">Dólares</string>
    <string name="dividir_pago">Dividir Pago</string>
    <string name="tarjeta_referencia">Tarjeta (Referencia)</string>
    <string name="usuarios_existentes">Usuarios existentes</string>
    <string name="comentarios">Comentarios</string>
    <string name="fecha_de_pago">Fecha De Pago</string>
    <string name="cerrar_sesion">Cerrar Sesión</string>
    <string name="edici_n_de_usuarios">Edición de Usuarios</string>
    <string name="editar_datos">Editar datos</string>
    <string name="userimage">UserImage</string>
    <string name="informe_categor_a">Informe Categoría</string>
    <string name="generar_pdf">Generar PDF</string>
    <!--Spinner Roles-->
</resources>