<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_ventas"
            android:icon="@drawable/ventas"
            android:title="@string/ventas" />
        <item
            android:id="@+id/nav_recibos"
            android:icon="@drawable/factura"
            android:title="@string/recibos" />
        <item
            android:id="@+id/nav_articulos"
            android:icon="@drawable/articulos"
            android:title="@string/articulos" />
        <item
            android:id="@+id/nav_cocina"
            android:icon="@drawable/cocina"
            android:title="@string/cocina"
            />
        <item
            android:id="@+id/nav_configuraciones"
            android:icon="@drawable/configuraciones"
            android:title="@string/configuraciones"
            />
        <item
            android:id="@+id/nav_cierre"
            android:icon="@drawable/cierre"
            android:title="@string/cierre"/>
        <item
            android:id="@+id/nav_pagos"
            android:icon="@drawable/pago"
            android:title="@string/pagos"/>
    </group>
</menu>