<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/back"
        tools:context="ui.articulo.Editar_EliminarArticulosVentasFragment">

        <View
            android:id="@+id/VwArticulos"
            android:layout_width="520dp"
            android:layout_height="0dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/ic_shape_login"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tv_Categoria"
            android:layout_width="300dp"
            android:layout_height="0dp"
            android:layout_marginTop="30dp"
            android:fontFamily="@font/crimson_text_bold"
            android:text="@string/editar_articulo"
            android:textAlignment="center"
            android:textSize="30sp"
            app:layout_constraintEnd_toEndOf="@id/VwArticulos"
            app:layout_constraintStart_toStartOf="@id/VwArticulos"
            app:layout_constraintTop_toTopOf="@id/VwArticulos" />

        <EditText
            android:id="@+id/etId"
            android:layout_width="350dp"
            android:layout_height="0dp"
            android:layout_marginTop="15dp"
            android:backgroundTint="@color/black"
            android:fontFamily="@font/crimson_text_regular"
            android:hint="@string/categoria"
            android:imeOptions="actionDone"
            android:inputType="number"
            android:autofillHints=""
            android:textColorHint="@color/black"
            android:visibility="invisible"
            app:layout_constraintEnd_toEndOf="@id/VwArticulos"
            app:layout_constraintStart_toStartOf="@id/VwArticulos"
            app:layout_constraintTop_toBottomOf="@id/tv_Categoria" />

        <EditText
            android:id="@+id/etNombreArticulo"
            android:layout_width="350dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:autofillHints=""
            android:backgroundTint="@color/gray"
            android:fontFamily="@font/crimson_text_regular"
            android:hint="@string/nombre"
            android:imeOptions="actionDone"
            android:inputType="text"
            android:minHeight="48sp"
            android:textColorHint="@color/gray"
            app:layout_constraintEnd_toEndOf="@+id/VwArticulos"
            app:layout_constraintStart_toStartOf="@+id/VwArticulos"
            app:layout_constraintTop_toBottomOf="@+id/etId" />

        <EditText
            android:id="@+id/etPrecioArticulo"
            android:layout_width="350dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:autofillHints=""
            android:backgroundTint="@color/gray"
            android:fontFamily="@font/crimson_text_regular"
            android:hint="@string/precio"
            android:imeOptions="actionDone"
            android:inputType="number"
            android:minHeight="48sp"
            android:textColorHint="@color/gray"
            app:layout_constraintEnd_toEndOf="@+id/VwArticulos"
            app:layout_constraintStart_toStartOf="@+id/VwArticulos"
            app:layout_constraintTop_toBottomOf="@id/etNombreArticulo" />

        <EditText
            android:id="@+id/etDescripcion"
            android:layout_width="350dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:autofillHints=""
            android:backgroundTint="@color/gray"
            android:fontFamily="@font/crimson_text_regular"
            android:hint="@string/descripcion_egresos"
            android:imeOptions="actionDone"
            android:inputType="textMultiLine"
            android:lines="3"
            android:minHeight="48sp"
            android:textColorHint="@color/gray"
            app:layout_constraintEnd_toEndOf="@+id/VwArticulos"
            app:layout_constraintStart_toStartOf="@+id/VwArticulos"
            app:layout_constraintTop_toBottomOf="@id/etPrecioArticulo" />

        <TextView
            android:id="@+id/tvCategoria"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="250dp"
            android:fontFamily="@font/crimson_text_bold"
            android:text="@string/categoria"
            android:textColor="@color/color_Primary"
            android:textSize="20sp"
            app:layout_constraintEnd_toEndOf="@id/VwArticulos"
            app:layout_constraintStart_toStartOf="@id/VwArticulos"
            app:layout_constraintTop_toBottomOf="@+id/etDescripcion" />

        <Spinner
            android:id="@+id/sCategoría"
            android:layout_width="350dp"
            android:layout_height="50dp"
            android:layout_marginTop="20dp"
            android:contentDescription="@string/articulos"
            app:layout_constraintEnd_toEndOf="@+id/VwArticulos"
            app:layout_constraintStart_toStartOf="@+id/VwArticulos"
            app:layout_constraintTop_toBottomOf="@+id/tvCategoria" />


        <TextView
            android:id="@+id/tvInventario"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="250dp"
            android:fontFamily="@font/crimson_text_bold"
            android:gravity="center"
            android:text="@string/inventario"
            android:textColor="@color/color_Primary"
            android:textSize="20sp"
            app:layout_constraintEnd_toEndOf="@+id/VwArticulos"
            app:layout_constraintStart_toStartOf="@+id/VwArticulos"
            app:layout_constraintTop_toBottomOf="@+id/sCategoría" />

        <TextView
            android:id="@+id/tvStock"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="250dp"
            android:fontFamily="@font/crimson_text_regular"
            android:text="@string/en_stock"
            android:textColor="@color/gray"
            android:textSize="18sp"
            app:layout_constraintEnd_toEndOf="@+id/VwArticulos"
            app:layout_constraintStart_toStartOf="@+id/VwArticulos"
            app:layout_constraintTop_toBottomOf="@+id/tvInventario" />

        <EditText
            android:id="@+id/etStockArticulo"
            android:layout_width="350dp"
            android:layout_height="wrap_content"
            android:autofillHints=""
            android:backgroundTint="@color/gray"
            android:fontFamily="@font/crimson_text_regular"
            android:hint="@string/_0"
            android:imeOptions="actionDone"
            android:inputType="number"
            android:minHeight="48sp"
            android:textColorHint="@color/gray"
            app:layout_constraintEnd_toEndOf="@+id/VwArticulos"
            app:layout_constraintStart_toStartOf="@+id/VwArticulos"
            app:layout_constraintTop_toBottomOf="@+id/tvStock" />


        <ImageView
            android:id="@+id/ivArticulo"
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:layout_marginTop="20dp"
            android:background="@color/gray"
            android:contentDescription="@string/productimg"
            app:layout_constraintEnd_toEndOf="@+id/VwArticulos"
            app:layout_constraintStart_toStartOf="@+id/VwArticulos"
            app:layout_constraintTop_toBottomOf="@id/etStockArticulo" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="100dp"
            android:fontFamily="@font/crimson_text_regular"
            android:text="@string/elija_una_foto"
            android:textColor="@color/gray"
            app:drawableLeftCompat="@drawable/folder_24"
            app:layout_constraintStart_toEndOf="@id/ivArticulo"
            app:layout_constraintTop_toBottomOf="@id/etStockArticulo" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnLimpiarArt"
            android:layout_width="130dp"
            android:layout_height="0dp"
            android:layout_marginStart="30dp"
            android:layout_marginTop="30dp"
            android:background="@drawable/btn_shape"
            android:drawableEnd="@drawable/limpieza"
            android:fontFamily="@font/crimson_text_regular"
            android:text="@string/limpiar"
            android:textSize="12sp"
            app:layout_constraintStart_toStartOf="@id/VwArticulos"
            app:layout_constraintTop_toBottomOf="@id/ivArticulo" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnEditarArt"
            android:layout_width="130dp"
            android:layout_height="0dp"
            android:layout_marginTop="30dp"
            android:background="@drawable/btn_shape"
            android:drawableEnd="@drawable/agregar"
            android:fontFamily="@font/crimson_text_regular"
            android:text="@string/editar"
            android:textSize="12sp"
            app:layout_constraintEnd_toStartOf="@id/btnEliminarArt"
            app:layout_constraintStart_toEndOf="@id/btnLimpiarArt"
            app:layout_constraintTop_toBottomOf="@id/ivArticulo" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnEliminarArt"
            android:layout_width="130dp"
            android:layout_height="0dp"
            android:layout_marginTop="30dp"
            android:background="@drawable/btn_shape"
            android:drawableEnd="@drawable/eliminar"
            android:fontFamily="@font/crimson_text_regular"
            android:text="@string/eliminar"
            android:textSize="12sp"
            app:layout_constraintEnd_toEndOf="@id/VwArticulos"
            app:layout_constraintStart_toEndOf="@id/btnEditarArt"
            app:layout_constraintTop_toBottomOf="@id/ivArticulo" />


    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>