<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.frutas.AgregarFrutaFragment"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/back">

    <View
        android:id="@+id/vwInicio"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:background="@color/color_Primary"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <View
        android:id="@+id/VwRegister"
        android:layout_width="520dp"
        android:layout_height="700dp"
        android:background="@drawable/ic_shape_login"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <ImageView
        android:id="@+id/ivRegresar"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_marginStart="10dp"
        android:src="@drawable/baseline_arrow_back_24"
        app:layout_constraintBottom_toBottomOf="@id/vwInicio"
        app:layout_constraintStart_toStartOf="@id/vwInicio"
        app:layout_constraintTop_toTopOf="@id/vwInicio" />

    <TextView
        android:id="@+id/tvAgregarFruta"
        android:layout_width="200dp"
        android:layout_height="0dp"
        android:layout_marginTop="30dp"
        android:text="@string/agregar_fruta"
        android:textAlignment="center"
        android:textColor="@color/boton"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/vwInicio" />

    <TextView
        android:id="@+id/tvNombreFruta"
        android:layout_width="80dp"
        android:layout_height="0dp"
        android:layout_marginTop="30dp"
        android:text="@string/nombre"
        android:textColor="@color/boton"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvAgregarFruta"
        app:layout_constraintEnd_toEndOf="parent"/>

    <EditText
        android:id="@+id/etNombreFruta"
        android:layout_width="331dp"
        android:layout_height="0dp"
        android:backgroundTint="@color/black"
        android:textColor="@color/black"
        android:textColorHint="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvNombreFruta"
        android:minHeight="48sp"/>

    <TextView
        android:id="@+id/tvPrecioFruta"
        android:layout_width="80dp"
        android:layout_height="0dp"
        android:layout_marginTop="20dp"
        android:text="@string/precio"
        android:textColor="@color/boton"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/etNombreFruta"
        app:layout_constraintEnd_toEndOf="parent"/>

    <EditText
        android:id="@+id/etPrecioFruta"
        android:layout_width="331dp"
        android:layout_height="0dp"
        android:backgroundTint="@color/black"
        android:hint="@string/_0_00"
        android:textColor="@color/black"
        android:textColorHint="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvPrecioFruta"
        android:minHeight="48sp"/>

    <TextView
        android:id="@+id/tvInventarioFruta"
        android:layout_width="90dp"
        android:layout_height="0dp"
        android:layout_marginTop="20dp"
        android:text="@string/inventario"
        android:textColor="@color/boton"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/etPrecioFruta"
        app:layout_constraintEnd_toEndOf="parent"/>

    <TextView
        android:id="@+id/tvStock"
        android:layout_width="60dp"
        android:layout_height="0dp"
        android:layout_marginTop="5dp"
        android:textAlignment="center"
        android:text="@string/stock"
        android:textColor="@color/gray"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvInventarioFruta"
        app:layout_constraintEnd_toEndOf="parent"/>

    <EditText
        android:id="@+id/etInventarioFruta"
        android:layout_width="331dp"
        android:layout_height="0dp"
        android:backgroundTint="@color/black"
        android:hint="@string/_0"
        android:textColor="@color/black"
        android:textColorHint="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvStock" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnGuardarFruta"
        android:layout_width="120dp"
        android:layout_height="0dp"
        android:textColor="@color/boton"
        android:background="@drawable/btn_shape"
        android:layout_marginTop="40dp"
        android:textStyle="bold"
        android:text="@string/guardar"
        app:layout_constraintTop_toBottomOf="@id/etInventarioFruta"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>